--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="shorten_it">Shorten it!</string>
     <string name="paste_your_link">Paste your first link into the field to shorten it</string>
     <string name="url_copy">copy</string>
+    <string name="copied_to_clipboard">Copied to clipboard</string>
 </resources>
